# indemnify

app/: index.html  package.json  vite.config.js
app/src/: App.svelte  main.ts
backend/: Anchor.toml
backend/programs/indemnify/: Cargo.toml
backend/programs/indemnify/src/: lib.rs
backend/tests/: indemnify.ts
program/: Cargo.toml
program/src/: processor.rs
